# clone_avatar_ai

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
api/: main.py
pipeline/: __init__.py  echomimic_wrapper.py  instantid_embed.py
shared/: __init__.py  audit_log.py  config.py  job_store.py  metrics.py  schemas.py  storage.py
workers/: __init__.py  celery_app.py  tasks.py
workers/stages/: input_prep.py  postprocess.py  quality_gate.py  tts_stage.py  ugc_pack.py  video_gen.py
